k8s/daemonset.yaml
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: weave-npc
  namespace: kube-system
  labels:
    k8s-app: weave-npc
      annotations:
        scheduler.alpha.kubernetes.io/tolerations: |
          [
            {   
              "key": "dedicated",
              "operator": "Equal",
              "value": "master",
              "effect": "NoSchedule"
            }
          ]
spec:
  template:
    metadata:
      name: weave-npc
      namespace: kube-system
      labels:
        k8s-app: weave-npc
    spec:
      hostPID: true
      hostNetwork: true
      containers:
      - name: weave-npc
        image: weaveworks/weave-npc:preview-20160919
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
