k8s/np.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-nameserver
  namespace: default
spec:
  podSelector:
    matchLabels:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
